--- a/.github/workflows/eks-tf.yaml
+++ b/.github/workflows/eks-tf.yaml
@@ -13,6 +13,7 @@ jobs:
       SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
     runs-on: ubuntu-latest
     steps:
+      - uses: hashicorp/setup-terraform@v3
       - uses: actions/checkout@v2
         name: Checkout repo
         with:
