--- a/.github/workflows/eks-tf.yaml
+++ b/.github/workflows/eks-tf.yaml
@@ -35,4 +35,6 @@ jobs:
       #     role-session-name: DeployTF
       - name: TF Apply
         working-directory: ./deploy/kubernetes/terraform
-        run: TF_VAR_private_key_path="$SSH_PRIVATE_KEY" terraform apply -auto-approve
+        run: |
+            terraform init
+            TF_VAR_private_key_path="$SSH_PRIVATE_KEY" terraform apply -auto-approve
